docs: include docs for response
